--- a/index.html
+++ b/index.html
@@ -10,26 +10,10 @@
 <body>
     <div id="container">
         <div class="header-btns">
-            <div class="cake-btn">
-                <label for="cake-btn"><img src="img/icon-cake.png" style="width:30px"></label>
-                <button id ="cake-btn" onclick="cake()"></button>
-            </div>
-
-            <div class="candle-btn">
-                <label for="candle-btn"><img src="img/icon-candle.png" style="width:30px"></label>
+                <button id ="cake-btn"></button>
                 <button id ="candle-btn"></button>    
-            </div>
-
-            <div class="lighter-btn">
-                <label for="lighter-btn"><img src="img/icon-lighter.png" style="width:30px"></label>
                 <button id ="lighter-btn"></button>    
-            </div>
-
-            <div class="clear-btn">
-                <label for="clear-btn"><img src="img/icon-blow.png" style="width:30px"></label>
                 <button id ="clear-btn" onclick="deleteLights()"></button>    
-            </div>
-
         </div>
 
         <div class="table">
