--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cumpleaños Juani</title>
+    <title>Birthday Cake Maker</title>
+    <link rel="icon" type="image/png" href="img/icon-cake.png">
+
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -13,11 +15,12 @@
                 <button id ="cake-btn"></button>
                 <button id ="candle-btn"></button>    
                 <button id ="lighter-btn"></button>    
-                <button id ="clear-btn" onclick="deleteLights()"></button>    
+                <button id ="blow-btn"></button>    
+                <button id="remove-btn">Erase</button>
         </div>
 
         <div class="table">
-            <img src="img/table.png" alt="">
+            <img src="img/table.png" alt="mesa">
         </div>
 
     </div>
