--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
 </head>
 <body>
     <div id="container">
+
+        <div class="audio">
+            <audio controls>
+                <source src="audio/happybirtdaytoyou.mp3" type="audio/mp3">
+            </audio>
+        </div>
         <div class="header-btns">
                 <button id ="cake-btn"></button>
                 <button id ="candle-btn"></button>    
@@ -22,7 +28,10 @@
         <div class="table">
             <img src="img/table.png" alt="mesa">
         </div>
-
+    </div>
+    
+    <div class="aviso">
+        <h1>No disponible para móviles y tablets, ábrelo desde tu ordenador :)</h1>
     </div>
     <script src="script.js"></script>
 </body>
